    + [NT] Make --suppress-tags{,--from-file} do something when used
      with --check-part and document that --tags causes the option
      to be ignored.
    + [NT] Accept the magic token "{VENDOR}" as a part of the value
      to --profile.
    + [NT] Add new command line option "--ignore-lintian-env" to make
      lintian ignore all environment variables starting with LINTIAN_.

  * lib/Lintian/Collect.pm:
    + [NT] Add "is_non_free" method to easily check of a given
      package appears to be non-free.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Re-instate the "TEXTREL" marker.  This fixes a regression
      where shared-libs compiled without pic was not reported.
      Thanks to Dmitry Shachnev for the assistance in debugging this.
    + [NT] Recognise packages in section "metapackages" as a
      metapackage.  Thanks to Axel Beckert for the report.
      (Closes: #698610)
  * lib/Lintian/Collect/Package.pm:
    + [NT] Ensure the "root" entry of indices do not contain itself.
      (Closes: #695866)
  * lib/Lintian/Command/Simple.pm:
    + [NT] Use constant time lookup access instead of linear scan with
      "hashref" wait.
  * lib/Lintian/Lab.pm:
    + [NT] Add lab_query method to handle lab-queries directly.
    + [NT] Fix bitrot of repair_lab and rename it to repair for
      consistency.
  * lib/Lintian/Lab{,/Manifest}.pm:
    + [NT] Add support for grouping of manifests.
  * lib/Lintian/Lab/Manifest.pm:
    + [NT] Fix an error in visit_all when sufficient keys for an
      exact look up was given.
  * lib/Lintian/Processable.pm:
    + [NT] Fix issue where packages loaded from the lab indices would
      sometimes get a wrong source-version.
  * lib/Lintian/Relation/Version.pm:
    + [NT] Add and export "versions_comparator" that can be used for
      sorting purposes.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Use "&amp;" in the manpage ref URLs to generate proper HTML.
      Thanks to Vasudev Kamath for reporting the issue.