@@ -194,6 +194,7 @@ lintian (2.5.12) UNRELEASED; urgency=low
       to --profile.
     + [NT] Add new command line option "--ignore-lintian-env" to make
       lintian ignore all environment variables starting with LINTIAN_.
+    + [NT] Add a new command line option --no-display-experimental.
 
   * lib/Lintian/Collect.pm:
     + [NT] Add "is_non_free" method to easily check of a given
